COH-25509 Run tests with modules in Coherence gRPC modules (merge main -> ce/main 92472) RQ job.9.20220510182753.13544
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 92504]